Ensured proper z-index layering of elements on report form page

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -21,7 +21,7 @@ p {
 }
 
 main {
-  flex: 1;
+  position: relative;
   z-index: 3;
 }
 
