--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -10,6 +10,7 @@ nav {
   width: fit-content;
   cursor: default;
   z-index: 3;
+  position: relative;
 
   font: {
     family: "Snowburst One", system-ui;
